--- a/config/apps-available/lays.ini
+++ b/config/apps-available/lays.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 
-chdir			= /var/www/html/lays
+chdir			= /var/www/html/lays-webapp/lays
 module			= lays.wsgi:application
 plugin			= python3
-home			= /home/vagrant/virtualenv-lays
+home			= /home/dev/virtualenv-lays
 
 master			= true
 processes		= 5
